Face Sets From Masks/Visible bleed over to the hidden parts of your mesh #74499

Closed
opened 2020-03-06 15:37:08 +01:00 by Frozen_Death_Knight · 5 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.50

Blender Version
Broken: version: 2.83 (sub 6), branch: master, commit date: 2020-03-06 10:05, hash: 7d9a5b7b10

Short description of error
Using any of these commands on a mesh where you have hidden parts of it actually bleed over to the hidden mesh by one whole face. This is a problem because selecting that face set again and isolating it will make your set expand by one whole face across your entire selection.

Exact steps for others to reproduce the error
Hide parts of your mesh by creating a face set. Then use Face Sets From Masks/Visible and then invert/hide your face set selection. The face set colour of your Face Sets From Masks/Visible command should be bleeding over now. Reselect the face set and isolate it. The set should have expanded by one whole face across the board.

Desktop 2020.03.06 - 14.56.43.01.mp4

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.50 **Blender Version** Broken: version: 2.83 (sub 6), branch: master, commit date: 2020-03-06 10:05, hash: `7d9a5b7b10` **Short description of error** Using any of these commands on a mesh where you have hidden parts of it actually bleed over to the hidden mesh by one whole face. This is a problem because selecting that face set again and isolating it will make your set expand by one whole face across your entire selection. **Exact steps for others to reproduce the error** Hide parts of your mesh by creating a face set. Then use Face Sets From Masks/Visible and then invert/hide your face set selection. The face set colour of your Face Sets From Masks/Visible command should be bleeding over now. Reselect the face set and isolate it. The set should have expanded by one whole face across the board. [Desktop 2020.03.06 - 14.56.43.01.mp4](https://archive.blender.org/developer/F8391896/Desktop_2020.03.06_-_14.56.43.01.mp4)

Added subscriber: @Frozen_Death_Knight

Added subscriber: @Frozen_Death_Knight
Pablo Dobarro self-assigned this 2020-03-06 15:43:13 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

@PabloDobarro I have to update my bug report, since I found another bleeding issue. It's not only Faces Sets From Visbility/Masking that do this, but the Draw Face Sets brush too. Here's a video demonstration:

Desktop 2020.03.08 - 16.05.26.01.mp4

@PabloDobarro I have to update my bug report, since I found another bleeding issue. It's not only Faces Sets From Visbility/Masking that do this, but the Draw Face Sets brush too. Here's a video demonstration: [Desktop 2020.03.08 - 16.05.26.01.mp4](https://archive.blender.org/developer/F8395222/Desktop_2020.03.08_-_16.05.26.01.mp4)

This issue was referenced by 503d5c0c65

This issue was referenced by 503d5c0c652dbce9dad428ab4b19e021c0ca8a39
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74499
No description provided.